--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,12 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <include layout="@layout/app_bar" android:id="@+id/app_bar"/>
-
+        <include
+            android:id="@+id/app_bar"
+            layout="@layout/app_bar" />
     </RelativeLayout>
+
 </android.support.v4.widget.DrawerLayout>
