--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,5 +11,13 @@
             android:id="@+id/app_bar"
             layout="@layout/app_bar" />
     </RelativeLayout>
+
+    <ListView
+        android:layout_width="@dimen/drawer_width"
+        android:layout_height="match_parent"
+        android:id="@+id/list_view_drawer"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:background="@color/white"/>
 
 </android.support.v4.widget.DrawerLayout>
